prepared Django project for deployment

--- a/classes/templates/classroom_detail.html
+++ b/classes/templates/classroom_detail.html
@@ -5,9 +5,37 @@
   <div class="card-header" style="background-color: #e3f2fd; color: 000034;">
     Classroom Details
   </div>
+  <div class="table-responsive">
+	<table class="table">
+	  <thead>
+	    <tr>
+	      <th scope="col">#</th>	    	
+	      <th scope="col">Name</th>
+	      <th scope="col">Date of birth</th>
+	      <th scope="col">Gender</th>
+	      <th scope="col">Exam Grade</th>
+	      <th scope="col">Classroom</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    {% for student in students %}
+	    <!-- always keep for loop outside!! (outside of tr) -->
+	    <tr>
+	      <th scope="row">{{forloop.counter}}</th>
+	      <td>{{student.name}}</td>
+	      <td>{{student.date_of_birth}}</td>
+	      <td>{{student.gender}}</td>
+	      <td>{{student.exam_grade}}</td>
+	      <td>{{student.classroom.name}}</td>
+	    {% endfor %}
+	    </tr>
+	  </tbody>
+	</table>
+  </div>
   <div class="card-body">
     <h5 class="card-title" style="color: 000034;">{{classroom.name}} {{classroom.subject}}</h5>
     <p class="card-text" style="color: 000034;">{{classroom.year}}</p>
+    <a href="{% url 'add-student' classroom.id %}" class="btn" style="background-color: #000034; color: white;">Add Student</a>    
     <a href="{% url 'classroom-update' classroom.id %}" class="btn" style="background-color: #000034; color: white;">Update</a>
     <a href="{% url 'classroom-delete' classroom.id %}" class="btn" style="background-color: #FFA500; color: #000034;">Delete</a>
   </div>
